--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
+  "devDependencies": {
+    "markdown-it": "^13.0.2",
+    "markdown-it-conditional-render": "^0.1.0",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-html5-embed": "^1.0.0",
+    "markdown-it-implicit-figures": "^0.12.0",
+    "markdown-it-kbd": "^2.2.2",
+    "markdown-it-task-lists": "^2.1.1",
+    "vitepress-markdown-timeline": "^1.2.1",
+    "vitepress-plugin-image-viewer": "^1.1.2",
+    "vitepress": "^1.0.0-rc.42"
+  },
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
   },
+  "type": "module",
   "dependencies": {
-    "vitepress": "^1.0.0-rc.42"
+    "swiper": "^11.0.6"
   }
 }
